--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DISCORD_TOKEN=your_bot_token_here
 CLIENT_ID=your_client_id_here
 
 # Optional: Development Guild for faster command deployment
-GUILD_ID=your_dev_guild_id
+GUILD_ID=
 
 # Bot Settings
 DEFAULT_PREFIX=!
@@ -15,5 +15,17 @@ DATABASE_PATH=./data/theoprotect.db
 # Logs
 LOG_CHANNEL_ID=
 
-# Anti-Phishing API (optional)
-PHISHING_API_KEY=
+# External APIs (Optional - leave empty to disable)
+# Google Safe Browsing API for phishing detection
+# Get your key: https://developers.google.com/safe-browsing/v4/get-started
+GOOGLE_SAFE_BROWSING_KEY=
+
+# Sightengine API for NSFW image detection
+# Get your keys: https://sightengine.com/
+SIGHTENGINE_API_USER=
+SIGHTENGINE_API_SECRET=
+
+# OpenAI API for AI Moderator
+# Get your key: https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
