--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "better-sqlite3": "^11.7.0",
-    "canvas": "^2.11.2",
-    "node-cron": "^3.0.3",
     "axios": "^1.7.9"
+  },
+  "optionalDependencies": {
+    "canvas": "^2.11.2"
   }
 }
