✨ Add web dashboard with real-time stats, graphs, and admin controls

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "deploy": "node src/deploy-commands.js",
-    "update": "git pull && npm install && npm run deploy"
+    "update": "git pull && npm install && npm run deploy",
+    "dashboard": "node src/dashboard/server.js"
   },
   "keywords": ["discord", "bot", "security", "moderation", "protection"],
   "author": "theo7791l",
@@ -21,7 +22,9 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "better-sqlite3": "^11.7.0",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "express": "^4.19.2",
+    "ws": "^8.17.0"
   },
   "optionalDependencies": {
     "canvas": "^2.11.2"
