🔗 Integrate dashboard with main bot + auto-start on launch

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,8 @@
-# Bot Configuration
-DISCORD_TOKEN=your_bot_token_here
-CLIENT_ID=your_client_id_here
+# Discord Bot Token
+DISCORD_TOKEN=your_token_here
 
-# Optional: Development Guild for faster command deployment
-GUILD_ID=
+# Discord Application ID
+APPLICATION_ID=your_application_id_here
 
-# Bot Settings
-DEFAULT_PREFIX=!
-OWNER_ID=your_discord_user_id
-
-# Database
-DATABASE_PATH=./data/theoprotect.db
-
-# Logs
-LOG_CHANNEL_ID=
-
-# External APIs (Optional - leave empty to disable)
-# Google Safe Browsing API for phishing detection
-# Get your key: https://developers.google.com/safe-browsing/v4/get-started
-GOOGLE_SAFE_BROWSING_KEY=
-
-# Sightengine API for NSFW image detection
-# Get your keys: https://sightengine.com/
-SIGHTENGINE_API_USER=
-SIGHTENGINE_API_SECRET=
-
-# OpenAI API for AI Moderator
-# Get your key: https://platform.openai.com/api-keys
-OPENAI_API_KEY=
-OPENAI_MODEL=gpt-4o-mini
+# Dashboard Settings (optional)
+DASHBOARD_PORT=3000
