--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
   "name": "theoprotect",
   "version": "0.0.2-beta",
-  "description": "Bot Discord de sécurité avancée - Anti-spam, Anti-Raid, Anti-Nuke, Captcha et plus",
+  "description": "Advanced Discord moderation bot with AI-powered features",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js",
     "deploy": "node src/deploy-commands.js",
-    "update": "git pull && npm install && npm run deploy",
-    "dashboard": "node src/dashboard/server.js"
+    "dev": "nodemon src/index.js"
   },
-  "keywords": ["discord", "bot", "security", "moderation", "protection"],
+  "keywords": [
+    "discord",
+    "bot",
+    "moderation",
+    "security"
+  ],
   "author": "theo7791l",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/theo7791l/theoprotect.git"
-  },
   "dependencies": {
-    "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5",
-    "better-sqlite3": "^11.7.0",
-    "axios": "^1.7.9",
-    "express": "^4.19.2",
-    "ws": "^8.17.0"
+    "discord.js": "^14.17.3",
+    "dotenv": "^16.4.7",
+    "better-sqlite3": "^11.9.1",
+    "express": "^4.21.2",
+    "ws": "^8.18.0"
   },
   "optionalDependencies": {
-    "canvas": "^2.11.2"
+    "@napi-rs/canvas": "^0.1.63",
+    "openai": "^4.77.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
