fix: harmoniser les variables d'environnement et ajouter les variables manquantes

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
-# Discord Bot Token
+# Discord Bot Configuration
+# Obligatoire
 DISCORD_TOKEN=your_token_here
-
-# Discord Application ID
-APPLICATION_ID=your_application_id_here
+CLIENT_ID=your_client_id_here
+OWNER_ID=your_discord_user_id_here
 
 # Dashboard Settings (optional)
 DASHBOARD_PORT=3000
+
+# Development (optional)
+# GUILD_ID=your_test_server_id  # Pour déploiement rapide des commandes en dev
+
+# Database (optional)
+# DATABASE_PATH=./data/theoprotect.db
+
+# APIs optionnelles
+# GOOGLE_SAFE_BROWSING_KEY=your_api_key_here  # Anti-phishing avancé
+# OPENAI_API_KEY=your_openai_key_here  # Modération IA avancée
